# cio

./: .gitignore  Cargo.toml  README.md
Example/: main.rs
src/: colorstyle.rs  extensions.rs  formatext.rs  input.rs  lib.rs  printf.rs  println.rs
src/format/: basic.inc  common.inc  math.inc  table.inc
