[package]
name = "cio"
version = "0.2.0"
edition = "2021"
description = """
CIO provides two powerful procedural macros (`printf!` and `input!`)
that enhance console I/O operations in Rust, bringing Python-like
convenience to Rust's type-safe environment.
"""
license = "MIT"
repository = "https://github.com/gerarddubard/cio"
homepage = "https://github.com/gerarddubard/cio"
documentation = "https://docs.rs/cio"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.101", features = ["full"] }
quote = "1.0.40"
regex = "1.11.1"